--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     iframe{width:100%;height:100%;border:0}
     .notice{position:fixed;left:10px;top:10px;background:rgba(255,255,255,0.9);padding:10px;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,0.2)}
   </style>
+  <link rel="shortcut icon" href="fivicom.png" type="image/x-icon">
 </head>
 <body>
   <iframe src="https://agrofacil-simples-gestao-01682.lovable.app/" title="AgroFácil live site"></iframe>
